# CPP-Reflection

./: .gitignore
Examples/: Arrays.cpp  CMakeLists.txt  MetaProperties.cpp  Serialization.cpp
Resources/Templates/: meta-initializer-list.mustache  module-file-source.mustache
Source/CMake/: MetaParser.cmake
Source/Parser/: CMakeLists.txt  Main.cpp  MetaDataManager.cpp  MetaDataManager.h  MetaUtils.cpp  MetaUtils.h  Precompiled.h  ReflectionParser.cpp  ReflectionParser.h  Switches.h
Source/Parser/LanguageTypes/: Constructor.cpp  Constructor.h  Function.cpp  Method.cpp
Source/Parser/Tokenizer/: Token.h  Tokenizer.h  TokenizerResult.h  TokenizerState.h
Source/Parser/Tokenizer/Impl/: TokenizerResult.hpp
Source/Runtime/: Argument.h  ArgumentConfig.h  Array.h  ArrayVariantContainer.h  ArrayWrapper.cpp  ArrayWrapper.h  ArrayWrapperBase.h  ArrayWrapperContainer.h  CMakeLists.txt  Constructor.h  ConstructorInvoker.h  Destructor.h  DestructorInvoker.h  EnumBase.h  EnumContainer.h  FieldGetter.h  FieldSetter.h  Function.h  FunctionInvoker.h  GlobalGetter.h  GlobalSetter.h  Invokable.h  JsonConfig.h  Macros.h  MetaManager.cpp  MetaManager.h  MetaProperty.h  Method.h  MethodInvoker.h  Object.h  ObjectWrapper.cpp  ObjectWrapper.h  ReflectionDatabase.cpp  ReflectionDatabase.h  Type.cpp  Type.h  TypeConfig.h  TypeCreator.cpp  TypeCreator.h  TypeData.h  (+8 more)
Source/Runtime/Impl/: ArrayVariantContainer.hpp  MetaManager.hpp  ReflectionDatabase.hpp  Type.hpp  TypeData.hpp  TypeInfo.hpp  VariantContainer.hpp
